--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "add": "^2.0.6",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-awesome-modal": "^2.0.5",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "^3.9.6"
