--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "set-game",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cakeinpanic.github.io/set-game-react",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -11,6 +12,7 @@
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "add": "^2.0.6",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-awesome-modal": "^2.0.5",
@@ -21,6 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "gh-pages": "npm run build && gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
