--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "add": "^2.0.6",
+    "classnames": "^2.2.6",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-awesome-modal": "^2.0.5",
